# statsmaster

./: pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-publish.yml
my_library/: statsmaster.py
my_library/.ipynb_checkpoints/: __init__-checkpoint.py
