[metadata]
name = statsmaster
version = 0.1.0
author = Mateus Augusto da Silva Ali Fontes
author_email = mateusalifontes@gmail.com
description = A powerful statistics library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mateusali/statsmaster
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    pandas
    scipy
